--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
       <div id="app"></div>
-      <script type="module" src="/src/scripts/main.js"></script>
+      <script type="module" src="./src/scripts/backend.js  "></script>
     </body>
   </html>
