--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <div id="app"></div>
-      
-      <script type="module" src="./src/scripts/backend.js  "></script>
+        <p id="error" style="color:red"></p>
+      <script type="module" src="./src/scripts/main.js  "></script>
     </body>
   </html>
